--- a/virtual/perl-CPAN-Meta-YAML/ChangeLog
+++ b/virtual/perl-CPAN-Meta-YAML/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-CPAN-Meta-YAML
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-CPAN-Meta-YAML/ChangeLog,v 1.14 2011/12/14 23:19:51 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-CPAN-Meta-YAML/ChangeLog,v 1.15 2011/12/20 13:05:54 ago Exp $
+
+  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
+  perl-CPAN-Meta-YAML-0.4.0.ebuild:
+  Stable for AMD64, wrt bug #393397
 
   14 Dec 2011; Markus Meier <maekke@gentoo.org>
   perl-CPAN-Meta-YAML-0.4.0.ebuild:
