--- a/x11-apps/mkfontscale/ChangeLog
+++ b/x11-apps/mkfontscale/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/mkfontscale
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.85 2011/10/15 04:58:57 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.86 2011/12/20 15:41:23 ago Exp $
+
+  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> mkfontscale-1.0.9-r1.ebuild:
+  Stable for AMD64, wrt bug #394393
 
 *mkfontscale-1.0.9-r1 (15 Oct 2011)
 
