--- a/dev-libs/rasqal/ChangeLog
+++ b/dev-libs/rasqal/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/rasqal
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/rasqal/ChangeLog,v 1.68 2011/11/18 11:41:40 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/rasqal/ChangeLog,v 1.69 2011/12/20 16:40:44 ssuominen Exp $
+
+  20 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> rasqal-0.9.27.ebuild,
+  rasqal-0.9.28.ebuild:
+  Raise version requirement of raptor wrt #395229
 
 *rasqal-0.9.28 (18 Nov 2011)
 
