--- a/x11-apps/xdpyinfo/ChangeLog
+++ b/x11-apps/xdpyinfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xdpyinfo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.70 2011/12/20 15:38:33 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.71 2011/12/20 21:09:12 jer Exp $
+
+  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> xdpyinfo-1.3.0.ebuild:
+  Stable for HPPA (bug #394393).
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> xdpyinfo-1.3.0.ebuild:
   Stable for AMD64, wrt bug #394393
