--- a/net-misc/tigervnc/ChangeLog
+++ b/net-misc/tigervnc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/tigervnc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tigervnc/ChangeLog,v 1.113 2011/12/20 16:41:15 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/tigervnc/ChangeLog,v 1.114 2011/12/20 21:17:09 jer Exp $
+
+  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> tigervnc-1.1.0-r1.ebuild:
+  Stable for HPPA (bug #394395).
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> tigervnc-1.1.0-r1.ebuild:
   Stable for AMD64, wrt bug #394395
