--- a/gnome-base/gnome-common/ChangeLog
+++ b/gnome-base/gnome-common/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-common
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.91 2011/11/04 06:51:02 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.92 2011/12/20 21:30:12 jer Exp $
+
+  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> gnome-common-3.1.0.ebuild:
+  Stable for HPPA (bug #393007).
 
 *gnome-common-3.1.0 (04 Nov 2011)
 
