--- a/virtual/opencl/ChangeLog
+++ b/virtual/opencl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/opencl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/opencl/ChangeLog,v 1.1 2011/12/20 19:32:33 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/opencl/ChangeLog,v 1.2 2011/12/20 22:09:15 vapier Exp $
+
+  20 Dec 2011; Mike Frysinger <vapier@gentoo.org> opencl-0.ebuild:
+  Drop ATI from dep list for now since that only provides the libraries and not
+  the required headers #392179#2 by Emil Karlson.
 
 *opencl-0 (20 Dec 2011)
 
