--- a/net-im/empathy/ChangeLog
+++ b/net-im/empathy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/empathy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/empathy/ChangeLog,v 1.98 2011/11/27 19:06:08 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/empathy/ChangeLog,v 1.99 2011/12/20 22:21:38 armin76 Exp $
+
+  20 Dec 2011; Raúl Porcel <armin76@gentoo.org> empathy-2.32.2.ebuild:
+  Drop alpha
 
 *empathy-3.2.2 (27 Nov 2011)
 
