--- a/media-libs/fnlib/ChangeLog
+++ b/media-libs/fnlib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/fnlib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fnlib/ChangeLog,v 1.13 2011/12/16 14:37:40 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/fnlib/ChangeLog,v 1.14 2011/12/21 08:22:56 phajdan.jr Exp $
+
+  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> fnlib-0.5-r2.ebuild:
+  x86 stable wrt bug #393987
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> fnlib-0.5-r2.ebuild:
   Stable for AMD64, wrt bug #393987
