--- a/media-libs/raul/ChangeLog
+++ b/media-libs/raul/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/raul
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/raul/ChangeLog,v 1.12 2011/12/18 19:23:42 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/raul/ChangeLog,v 1.13 2011/12/21 08:26:03 phajdan.jr Exp $
+
+  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> raul-0.8.0.ebuild:
+  x86 stable wrt bug #393869
 
   18 Dec 2011; Agostino Sarubbo <ago@gentoo.org> raul-0.8.0.ebuild:
   Stable for AMD64, wrt bug #393869
