--- a/app-admin/eselect-timidity/ChangeLog
+++ b/app-admin/eselect-timidity/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/eselect-timidity
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-timidity/ChangeLog,v 1.18 2011/12/20 20:54:45 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/eselect-timidity/ChangeLog,v 1.19 2011/12/21 08:29:19 phajdan.jr Exp $
+
+  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  eselect-timidity-20110513.ebuild:
+  x86 stable wrt bug #393881
 
   20 Dec 2011; Jeroen Roovers <jer@gentoo.org>
   eselect-timidity-20110513.ebuild:
