--- a/x11-libs/fox-wrapper/ChangeLog
+++ b/x11-libs/fox-wrapper/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/fox-wrapper
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/fox-wrapper/ChangeLog,v 1.18 2011/12/16 15:39:00 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/fox-wrapper/ChangeLog,v 1.19 2011/12/21 08:34:42 phajdan.jr Exp $
+
+  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> fox-wrapper-3.ebuild:
+  x86 stable wrt bug #393897
 
   16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> fox-wrapper-3.ebuild:
   Stable for AMD64, wrt bug #393897
