--- a/media-plugins/vdr-sudoku/ChangeLog
+++ b/media-plugins/vdr-sudoku/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-sudoku
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-sudoku/ChangeLog,v 1.20 2011/12/17 18:59:13 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-sudoku/ChangeLog,v 1.21 2011/12/21 08:43:15 phajdan.jr Exp $
+
+  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> vdr-sudoku-0.3.5.ebuild:
+  x86 stable wrt bug #393925
 
   17 Dec 2011; Agostino Sarubbo <ago@gentoo.org> vdr-sudoku-0.3.5.ebuild:
   Stable for AMD64, wrt bug #393925
