--- a/media-libs/libmediainfo/ChangeLog
+++ b/media-libs/libmediainfo/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libmediainfo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmediainfo/ChangeLog,v 1.35 2011/12/15 13:24:41 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libmediainfo/ChangeLog,v 1.36 2011/12/21 20:17:43 radhermit Exp $
+
+*libmediainfo-0.7.52 (21 Dec 2011)
+
+  21 Dec 2011; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.52.ebuild:
+  Version bump.
 
   15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> libmediainfo-0.7.51.ebuild:
   Stable for AMD64, wrt bug #394617
