--- a/sys-devel/autoconf-archive/ChangeLog
+++ b/sys-devel/autoconf-archive/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/autoconf-archive
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/autoconf-archive/ChangeLog,v 1.41 2011/11/21 15:37:49 jlec Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/autoconf-archive/ChangeLog,v 1.42 2011/12/22 06:38:29 binki Exp $
+
+*autoconf-archive-2011.12.21 (22 Dec 2011)
+
+  22 Dec 2011; Nathan Phillip Brink <binki@gentoo.org>
+  +autoconf-archive-2011.12.21.ebuild:
+  Bump to autoconf-archive-2011.12.21.
 
   21 Nov 2011; Justin Lecher <jlec@gentoo.org>
   autoconf-archive-2011.09.17.ebuild:
