--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.831 2011/12/19 16:47:17 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.832 2011/12/22 13:26:21 aballier Exp $
+
+  22 Dec 2011; Alexis Ballier <aballier@gentoo.org>
+  mplayer-1.0_rc4_p20111215.ebuild, +files/swedish.patch:
+  fix build of swedish help, by larkang@gmail.com, bug #395677
 
   19 Dec 2011; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
   improve a warning
