--- a/dev-util/regexxer/ChangeLog
+++ b/dev-util/regexxer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/regexxer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/regexxer/ChangeLog,v 1.21 2011/03/28 18:43:16 angelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/regexxer/ChangeLog,v 1.22 2011/12/22 13:49:34 ssuominen Exp $
+
+*regexxer-0.10 (22 Dec 2011)
+
+  22 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +regexxer-0.10.ebuild,
+  +files/regexxer-0.10-sandbox.patch:
+  Version bump wrt #395671 by "poncho"
 
   28 Mar 2011; Christoph Mende <angelos@gentoo.org> regexxer-0.9.ebuild:
   Fixed slot deps
