--- a/media-video/hasciicam/ChangeLog
+++ b/media-video/hasciicam/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/hasciicam
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/hasciicam/ChangeLog,v 1.10 2011/12/22 16:58:56 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/hasciicam/ChangeLog,v 1.11 2011/12/22 18:12:34 ssuominen Exp $
+
+*hasciicam-1.1.2 (22 Dec 2011)
+
+  22 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +hasciicam-1.1.2.ebuild:
+  Version bump wrt #395701 by Alessandro Capogna
 
   22 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> -hasciicam-1.0.ebuild:
   old
