--- a/media-libs/wxsvg/ChangeLog
+++ b/media-libs/wxsvg/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/wxsvg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/wxsvg/ChangeLog,v 1.28 2011/09/29 03:19:43 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/wxsvg/ChangeLog,v 1.29 2011/12/22 21:08:44 ssuominen Exp $
+
+*wxsvg-1.1.5 (22 Dec 2011)
+
+  22 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +wxsvg-1.1.5.ebuild:
+  Version bump.
 
 *wxsvg-1.1.2 (29 Sep 2011)
 
