--- a/media-sound/clementine/ChangeLog
+++ b/media-sound/clementine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/clementine
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/clementine/ChangeLog,v 1.45 2011/12/22 22:21:42 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/clementine/ChangeLog,v 1.46 2011/12/22 22:25:36 ssuominen Exp $
+
+  22 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
+  -clementine-0.7.1-r1.ebuild:
+  old
 
   22 Dec 2011; Markus Meier <maekke@gentoo.org> clementine-0.7.1-r2.ebuild:
   x86 stable, bug #392425
