--- a/perl-core/Version-Requirements/ChangeLog
+++ b/perl-core/Version-Requirements/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Version-Requirements
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Version-Requirements/ChangeLog,v 1.12 2011/12/20 13:09:24 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Version-Requirements/ChangeLog,v 1.13 2011/12/22 22:19:02 maekke Exp $
+
+  22 Dec 2011; Markus Meier <maekke@gentoo.org>
+  Version-Requirements-0.101.20.ebuild:
+  x86 stable, bug #393397
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
   Version-Requirements-0.101.20.ebuild:
