--- a/virtual/perl-Module-Metadata/ChangeLog
+++ b/virtual/perl-Module-Metadata/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Module-Metadata
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Module-Metadata/ChangeLog,v 1.16 2011/12/20 13:12:49 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Module-Metadata/ChangeLog,v 1.17 2011/12/22 22:28:46 maekke Exp $
+
+  22 Dec 2011; Markus Meier <maekke@gentoo.org>
+  perl-Module-Metadata-1.0.6.ebuild:
+  x86 stable, bug #393397
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
   perl-Module-Metadata-1.0.6.ebuild:
