--- a/virtual/perl-Version-Requirements/ChangeLog
+++ b/virtual/perl-Version-Requirements/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for virtual/perl-Version-Requirements
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Version-Requirements/ChangeLog,v 1.14 2011/12/20 13:10:29 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/perl-Version-Requirements/ChangeLog,v 1.15 2011/12/22 22:20:08 maekke Exp $
+
+  22 Dec 2011; Markus Meier <maekke@gentoo.org>
+  perl-Version-Requirements-0.101.20-r2.ebuild:
+  x86 stable, bug #393397
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
   perl-Version-Requirements-0.101.20-r2.ebuild:
