--- a/media-libs/libchamplain/ChangeLog
+++ b/media-libs/libchamplain/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libchamplain
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libchamplain/ChangeLog,v 1.22 2011/11/02 21:26:59 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libchamplain/ChangeLog,v 1.23 2011/12/22 23:38:36 eva Exp $
+
+*libchamplain-0.12.1 (22 Dec 2011)
+
+  22 Dec 2011; Gilles Dartiguelongue <eva@gentoo.org>
+  +libchamplain-0.12.1.ebuild:
+  Version bump.
 
 *libchamplain-0.12.0-r1 (02 Nov 2011)
 
