--- a/net-analyzer/cacti-spine/ChangeLog
+++ b/net-analyzer/cacti-spine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/cacti-spine
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/cacti-spine/ChangeLog,v 1.30 2011/12/12 08:30:17 pva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/cacti-spine/ChangeLog,v 1.31 2011/12/23 00:02:17 halcy0n Exp $
+
+  23 Dec 2011; Mark Loeser <halcy0n@gentoo.org> cacti-spine-0.8.7g.ebuild:
+  Drop stable ppc/ppc64
 
 *cacti-spine-0.8.7i (12 Dec 2011)
 
