--- a/media-sound/soundkonverter/ChangeLog
+++ b/media-sound/soundkonverter/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/soundkonverter
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.22 2011/11/15 23:38:09 dilfridge Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.23 2011/12/23 00:22:07 ssuominen Exp $
+
+*soundkonverter-1.2.1 (23 Dec 2011)
+
+  23 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
+  +soundkonverter-1.2.1.ebuild:
+  Version bump wrt #395731 by Ivan S. Titov
 
 *soundkonverter-1.2.0 (16 Nov 2011)
 
