--- a/net-misc/ttytter/ChangeLog
+++ b/net-misc/ttytter/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/ttytter
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/ttytter/ChangeLog,v 1.1 2011/06/23 08:15:46 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/ttytter/ChangeLog,v 1.2 2011/12/24 09:02:43 hwoarang Exp $
+
+*ttytter-1.2.05 (24 Dec 2011)
+
+  24 Dec 2011; Markos Chandras <hwoarang@gentoo.org> +ttytter-1.2.05.ebuild:
+  version bump
 
 *ttytter-1.2.0 (23 Jun 2011)
 
