--- a/dev-ruby/tilt/ChangeLog
+++ b/dev-ruby/tilt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/tilt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tilt/ChangeLog,v 1.17 2011/12/04 16:47:52 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/tilt/ChangeLog,v 1.18 2011/12/25 09:13:26 graaff Exp $
+
+  25 Dec 2011; Hans de Graaff <graaff@gentoo.org> -tilt-1.2.2.ebuild:
+  Remove old version.
 
   04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> tilt-1.3.2.ebuild:
   Stable on amd64 wrt bug #368723
