--- a/dev-util/aruba/ChangeLog
+++ b/dev-util/aruba/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/aruba
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aruba/ChangeLog,v 1.8 2011/10/08 06:14:28 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aruba/ChangeLog,v 1.9 2011/12/25 10:57:18 graaff Exp $
+
+  25 Dec 2011; Hans de Graaff <graaff@gentoo.org> -aruba-0.3.6.ebuild:
+  Remove old version.
 
   08 Oct 2011; Hans de Graaff <graaff@gentoo.org> -aruba-0.4.2.ebuild,
   -aruba-0.4.3.ebuild, -aruba-0.4.5.ebuild:
