--- a/dev-util/aruba/ChangeLog
+++ b/dev-util/aruba/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/aruba
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aruba/ChangeLog,v 1.9 2011/12/25 10:57:18 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/aruba/ChangeLog,v 1.10 2011/12/25 11:00:43 graaff Exp $
+
+*aruba-0.4.10 (25 Dec 2011)
+
+  25 Dec 2011; Hans de Graaff <graaff@gentoo.org> +aruba-0.4.10.ebuild:
+  Version bump.
 
   25 Dec 2011; Hans de Graaff <graaff@gentoo.org> -aruba-0.3.6.ebuild:
   Remove old version.
