--- a/app-emacs/org-mode/ChangeLog
+++ b/app-emacs/org-mode/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/org-mode
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.135 2011/12/25 15:41:00 ulm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.136 2011/12/25 19:48:12 ago Exp $
+
+  25 Dec 2011; Agostino Sarubbo <ago@gentoo.org> org-mode-7.7.ebuild:
+  Stable for AMD64, wrt bug #396001
 
 *org-mode-7.8.02 (25 Dec 2011)
 
