--- a/games-util/pyfa/ChangeLog
+++ b/games-util/pyfa/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for games-util/pyfa
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/pyfa/ChangeLog,v 1.2 2011/11/30 18:33:25 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-util/cvs-repo/gentoo-x86/games-util/pyfa/ChangeLog,v 1.3 2011/12/26 03:40:41 tetromino Exp $
+
+*pyfa-1.1.1 (26 Dec 2011)
+
+  26 Dec 2011; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
+  -files/pyfa-1.0.3-staticPath.patch, -pyfa-1.0.6.ebuild, +pyfa-1.1.1.ebuild:
+  Bump. Adds Crucible 1.0.2 updates, proxy support, bugfixes and UI
+  improvements. Install icons in all available sizes. Drop obsolete version.
 
 *pyfa-1.1 (30 Nov 2011)
 
