--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.158 2011/12/08 19:38:36 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.159 2011/12/26 08:25:55 graaff Exp $
+
+*activesupport-3.1.3 (26 Dec 2011)
+
+  26 Dec 2011; Hans de Graaff <graaff@gentoo.org> +activesupport-3.1.3.ebuild:
+  Version bump. Drop keywords due to new multi_json dependency, bug 396043.
 
 *activesupport-2.3.14-r1 (08 Dec 2011)
 
