--- a/dev-ruby/activesupport/ChangeLog
+++ b/dev-ruby/activesupport/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/activesupport
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.159 2011/12/26 08:25:55 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.160 2011/12/26 08:46:41 graaff Exp $
+
+*activesupport-3.0.11-r1 (26 Dec 2011)
+
+  26 Dec 2011; Hans de Graaff <graaff@gentoo.org>
+  +activesupport-3.0.11-r1.ebuild, activesupport-3.1.3.ebuild:
+  Make sure only the latest slot installs binaries in /usr/bin.
 
 *activesupport-3.1.3 (26 Dec 2011)
 
