--- a/dev-python/simplejson/ChangeLog
+++ b/dev-python/simplejson/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/simplejson
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.51 2011/12/26 09:57:14 djc Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.52 2011/12/26 09:59:31 djc Exp $
+
+  26 Dec 2011; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.2.0.ebuild:
+  Remove old version.
 
 *simplejson-2.3.0 (26 Dec 2011)
 
