--- a/dev-ruby/multi_json/ChangeLog
+++ b/dev-ruby/multi_json/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/multi_json
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/multi_json/ChangeLog,v 1.8 2011/12/01 14:31:19 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/multi_json/ChangeLog,v 1.9 2011/12/26 10:30:57 grobian Exp $
+
+  26 Dec 2011; Fabian Groffen <grobian@gentoo.org> multi_json-1.0.4.ebuild:
+  Add Prefix keywords, bug #396043
 
 *multi_json-1.0.4 (01 Dec 2011)
 
