--- a/x11-libs/libxklavier/ChangeLog
+++ b/x11-libs/libxklavier/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libxklavier
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.154 2011/12/23 19:13:10 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.155 2011/12/26 11:30:01 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> libxklavier-5.1.ebuild:
+  arm stable, bug #379371
 
   23 Dec 2011; Agostino Sarubbo <ago@gentoo.org> libxklavier-5.1.ebuild:
   Stable for AMD64, wrt bug #379371
