--- a/media-libs/libdvdcss/ChangeLog
+++ b/media-libs/libdvdcss/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdvdcss
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdvdcss/ChangeLog,v 1.92 2011/12/20 22:26:21 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdvdcss/ChangeLog,v 1.93 2011/12/26 11:35:04 maekke Exp $
+
+  26 Dec 2011; Markus Meier <maekke@gentoo.org> libdvdcss-1.2.11.ebuild:
+  arm stable, bug #395383
 
   20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> libdvdcss-1.2.11.ebuild:
   Stable for AMD64, wrt bug #395383
